# yis

./: meson.build
src/: init.yi  lexer.yi  parser.yi  runtime.inc
src/bootstrap/: codegen.c  codegen.h  cogito_bindings.inc  diag.c  external_module.c  external_module.h  lexer.c  main.c  meson.build  parser.c  project.c  runtime_embedded.h  stdr.inc  sum_validate.c  typecheck.c
src/stdlib/: base64.yi  json.yi  net.yi  regex.yi  stdr.yi
